--- a/style.css
+++ b/style.css
@@ -657,16 +657,16 @@ form.search button:hover{
         display: block;
     }
     .dpt-menu .beauty ul{
-        background-image: url(assets/menu/menu_bg1.jpg);
+        background-image: url(img/menu/menu_bg1.jpg);
     }
     .dpt-menu .electric ul{
-        background-image: url(assets/menu/menu_bg2.jpg);
+        background-image: url(img/menu/menu_bg2.jpg);
     }
     .dpt-menu .fashion ul{
-        background-image: url(assets/menu/menu_bg3.jpg);
+        background-image: url(img/menu/menu_bg3.jpg);
     }
     .dpt-menu .homekit .mega{
-        background-image: url(assets/menu/menu_bg4.jpg);
+        background-image: url(img/menu/menu_bg4.jpg);
     }
 
     .dpt-menu .has-child > :where(ul,.mega)::before{
