--- a/style.css
+++ b/style.css
@@ -209,7 +209,6 @@ h4{
 }
 
 
-
 /* Header */
 :where(.off-canvas, header) li > a{
     display: flex;
@@ -244,7 +243,7 @@ h4{
 :where(.header-top, .thetop-nav).right ul ul li a{
     padding: 0.25em 1em;
 }
-.header-top .right ul ul li.current a{
+:where(.header-top, .thetop-nav) .right ul ul li.current a{
     background-color: var(--border-color);
 }
 .header-top li:hover ul{
@@ -389,7 +388,7 @@ form{
     position: relative;
 }
 form.search input{
-    line-height: 3.2em;
+    line-height: 3.25em;
     padding: 0 7em 0 4,5em;
     border: 0;
     outline: 0;
@@ -430,6 +429,15 @@ form.search button:hover{
     background-color: var(--white-color);
     overflow-y: auto;
     z-index: 1000;
+    transform: translateX(-100%);
+    visibility: hidden;
+    transition: transform .4s, visibility .4s;
+    will-change: transform, visibility;
+}
+.showmenu .site-off{
+    transform: translateX(0);
+    visibility: visible;
+    transform: transform .4s 0s, visibility 0s 0s;
 }
 .off-canvas .canvas-head{
     color:var(--white-color);
@@ -479,6 +487,10 @@ form.search button:hover{
     overflow: hidden;
     transition: max-height cubic-bezier(0.215, 0.610, 0.355, 1);
 }
+.off-canvas .expand > :where(ul, .mega){
+    max-height: 2000px;
+
+}
 .off-canvas .thetop-nav ul, .off-canvas nav > ul{
     flex-direction: column;
     align-items: flex-start;
@@ -516,6 +528,131 @@ form.search button:hover{
     border: 1px solid var(--border-color);
     line-height: 16px;
     margin: 0 0.5em 0;
+}
+
+/* SLIDER */
+.slider > div > .wrapper{
+    width: calc(100% - (300px + 2em));
+    margin-left: auto;
+}
+.slider .item {
+    position: relative;
+    height: 474px;
+}
+.slider .item::before{
+    content: '';
+    position: absolute;
+    top: 30%;
+    left: 0;
+    width: 450px;
+    height: 300px;
+    background-color: var(--white-color);
+    z-index: 1;
+    filter: blur(50px);
+    opacity: .8;
+}
+.slider .text-content{
+    position: relative;
+    height: var(--percent100);
+    justify-content: flex-end;
+    padding: 0 0 10% 10%;
+    z-index: 1;
+}
+.slider h4{
+    font-size: var(--font-small);
+    font-weight: var(--fw7);
+    width: fit-content;
+    padding: 4px 10px;
+    background-color: var(--dark-color);
+    color: var(--white-color);
+    border-radius: 4px;
+}
+.text-content :where(h2,h3) span:first-child{
+    font-weight: var(--fw3);
+    columns: var(--light-text-color);
+}
+.text-content :where(h2,h3) span:last-child{
+    color: var(--secondary-dark-color);
+    text-transform: uppercase;
+    letter-spacing: -1px;
+}
+.swiper-pagination .swiper-pagination-bullet-active{
+    background-color: var(--secondary-dark-color);
+}
+
+/* BRANDS */
+.brands .wrapper{
+    justify-content: space-around;
+    flex-wrap: wrap;
+    padding: 2em 0;
+}
+.brands .item img{
+    opacity: .25;
+    transition: opacity .3s;
+}
+.brands .item a:hover img{
+    opacity: 1;
+}
+
+/*SECTOP*/
+.sectop{
+    justify-content: space-between;
+    padding-bottom: 0.5em;
+    margin-bottom: 2em;
+    border-bottom: 1px solid var(--border-color);
+}
+.sectop h2{
+    position: relative;
+    font-size: 1.5em;
+    font-weight: var(--fw7);
+}
+.sectop h2 span:not(.circle){
+    padding: 0 0 0 2em;
+}
+.sectop h2 .circle{
+    top: -5px;
+}
+
+
+
+
+/*PRODUCTS, GLOBAL PRODUCTS*/
+.products .offer{
+    text-align: center;
+    margin-bottom: 1.5em;
+}
+.products .offer p{
+    text-transform: uppercase;
+    margin-bottom: 0.5em;
+}
+.products .offer ul{
+    gap: 1em;
+}
+.products .offer ul li{
+    position: relative;
+    width: 34px;
+    height: 34px;
+    padding: 0.5em;
+    line-height: initial;
+    color: var(--secondary-dark-color);
+    background-color: var(--light-bg-color);
+    border-radius: 5px;
+}
+.products .offer ul li:not(:last-child)::before{
+    content: ':';
+    position: absolute;
+    right: -0.6em;
+    color:var(--light-text-color);
+}
+
+/*PRODUCT, big prodict*/
+.products.big .item{
+    flex-direction: column;
+    padding: 2.5em;
+    border: 2px solid var(--secondary-dark-color);
+    border-radius: 7px;
+    max-width: 460px;
+    margin: 0 auto;
 }
 
 
@@ -618,6 +755,7 @@ form.search button:hover{
         margin-left: auto;
     }
 
+
     /*Departments menu */
     .dpt-menu{
         position: absolute;
@@ -685,5 +823,13 @@ form.search button:hover{
     }
     .dpt-menu .has-child:hover .mega{
         display: flex;
+    }
+
+    /*PRODUCTS*/
+    .trending .products{
+        flex: 0 0 33.3333%;
+    }
+    .products.big .media{
+        max-height: 373px;
     }
 }
