--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
- @import url('https://fonts.googleapis.com/css2?family=Poppings=wght@300;600;700;800&family=Rubik:wght@300;400;500;600&display=swap" rel="stylesheet">');
+@import url('https://fonts.googleapis.com/css2?family=Poppings=wght@300;600;700;800&family=Rubik:wght@300;400;500;600&display=swap" rel="stylesheet">');
 
 /*
 Fonts:
@@ -612,6 +612,9 @@ form.search button:hover{
 .sectop h2 .circle{
     top: -5px;
 }
+.trending .products{
+    flex: 0 0 33.3333%;
+}
 
 
 
@@ -734,7 +737,11 @@ form.search button:hover{
     height: 20px;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' width='16' height='16'%3E%3Cpath d='M12.0006 18.26L4.94715 22.2082L6.52248 14.2799L0.587891 8.7918L8.61493 7.84006L12.0006 0.5L15.3862 7.84006L23.4132 8.7918L17.4787 14.2799L19.054 22.2082L12.0006 18.26Z' fill='rgba(240,187,64,1)'%3E%3C/path%3E%3C/svg%3E");
     background-position-y:top;
-    background-repeat-y: no-repeat;
+    background-repeat-y: no repeat;
+}
+/* set star width*/
+.products .item:where(:nth-child(3),:nth-child(3)) .stars{
+    width: 64px;
 }
 
 .products h3{
@@ -745,7 +752,6 @@ form.search button:hover{
     -webkit-line-clamp: 2;
     display: -webkit-box;
     -webkit-box-orient: vertical;
-
 }
 
 .products h3 a:hover{
@@ -781,9 +787,17 @@ form.search button:hover{
     display: flex;
     position: relative;
 }
+.products .stock-danger {
+    color: var(--primary-color);
+}
+.flexwrap .row{
+    flex: 0 0 100%;
+    width: 100%;
+    margin-bottom: 2em;
+}
 
-/*PRODUCT, big prodict*/
-.products .big .item{
+/*PRODUCT, big product*/
+.products.big .item{
     flex-direction: column;
     padding: 2.5em;
     border: 2px solid var(--secondary-dark-color);
@@ -792,6 +806,7 @@ form.search button:hover{
     margin: 0 auto;
 }
 
+/*PRODUCT, mini item*/
 .products.mini .item{
     margin-bottom: 2em;
 }
@@ -810,11 +825,220 @@ form.search button:hover{
     font-weight: 400;
 }
 
+/*PRODUCTS, main products*/
+.products.main .item{
+    flex-direction: column;
+    flex-direction: 0 0 100%;
+    padding: 0 0.938em;
+    padding-bottom: 2em;
+}
+.products.main .media{
+    height: 390px;
+}
+
+/*BANNER*/
+.banner .item{
+    position: relative;
+    background-color: var(--white-color);
+    border: 1px solid var(--border-color);
+}
+.banner .image{
+    text-align: right;
+}
+.banner .get-gray{
+    background-color: var(--border-color);
+}
+.banner :where(.text-content, .over-link){
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: var(--percent100);
+    height: var(--percent100);
+}
+.banner .text-content{
+    padding: 1.5em 2.5em;
+}
+.banner h3{
+    font-size: calc(1em + 0.5vw);
+    font-weight: var(--fw3);
+}
+.banner h3 span{
+    font-size: 80%;
+}
+.banner .primary-button{
+    z-index: 3;
+}
+.banners .products-categories .item{
+    display: flex;
+    padding: 1.5em;
+}
+.banners .products-categories .image{
+    max-width: 150px;
+}
+.banners .second-links{
+    margin-top: 2em;
+}
+.mini-links li a:hover{
+    text-decoration: underline;
+}
+
+/* FOOTER, newsletter*/
+.newsletter{
+    padding: 2.5em;
+    background-color: var(--dark-color);
+    color: var(--white-color);
+}
+.newsletter h3{
+    font-size: 1.em;
+}
+.newsletter p{
+    font-weight: var(--fw3);
+    color: var(--border-color);
+    margin: 0.5em 0 1.5em;
+}
+.newsletter p strong{
+    color: var(--primary-color);
+}
+.newsletter form{
+    max-width: 500px;
+    width: var(--percent100);
+}
+
+/*FOOTER, widgets*/
+.widgets{
+    padding: 3.5em 2.5em;
+    background-color: var(--light-bg-color);
+}
+
+/*FOOTER, footer info*/
+.footer-info{
+    padding: 3.5em 0 5em;
+}
+.footer-info .wrapper .flexcol{
+    align-items: center;
+    gap: 0;
+}
+.footer-info ul li a{
+    font-size: 1.25em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    background-color: var(--light-bg-color);
+    border-radius: var(--percent50);
+    margin: 0.25em;
+    transition: var(--trans-background);
+}
+.footer-info ul li a:hover{
+    background-color: var(--border-color);
+}
+.footer-info .logo a{
+    margin: 0 0 1em -0.75em;
+}
+.footer-info .mini-text{
+    margin-top: 2em;
+    text-align: center;
+}
+
+/* BOTTOM MENU*/
+.menu-bottom{
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: 60px;
+    background-color: var(--white-color);
+    box-shadow: 0 -2px 10px rgb(0 0 0 / 10%);
+}
+.menu-bottom nav li{
+    flex: 1;
+}
+.menu-bottom nav li a{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0.5em 0;
+    color: var(--light-text-color);
+    transition: var(--trans-color);
+}
+.menu-bottom nav li a:hover{
+    color: var(--dark-color);
+}
+.menu-bottom nav li a span{
+    font-size: var(--font-smaller);
+}
+.menu-bottom nav li a i{
+    right: 50%;
+    width: 16px;
+    border-radius: var(--percent100);
+    margin-right: -20px;
+    background-color: var(--secondary-dark-color);
+}
+
+/* BOTTOM MENU, search*/
+.search-bottom{
+    position: fixed;
+    bottom: 60px;
+    width: var(--percent100);
+    padding: 2.5em 0;
+    background-color: var(--secondary-dark-color);
+    z-index: 1000;
+    visibility: hidden;
+    opacity: 0;
+    will-change: visibility, opacity;
+}
+.showsearch .search-bottom{
+    visibility: inherit;
+    opacity: 1;
+}
+.search-bottom .t-close{
+    position: absolute;
+    top: -54px;
+    right: 0;
+}
+.search-bottom .t-close:hover{
+    background-color: var(--primary-color);
+}
+
+/*OVERLAY*/
+.overlay{
+    position: fixed;
+    width: var(--percent100);
+    height: var(--percent100);
+    top: 0;
+    left: 0;
+    z-index: 999;
+    background-color: rgba(0, 0, 0, 0.4);
+    visibility: hidden;
+    opacity: 0;
+}
+
+/* RESPONSIVE*/
+@media screen and (min-width: 481px){
+    .products.main .item{
+        flex: 0 0 50%;
+    }
+}
+
+
+
+
 
 
 @media screen and(min-width: 768px){
     .products .price .current{
         font-size: 1.25em;
+    }
+
+    .products.mini,
+    .banner .row,
+    .widgets .row{
+        flex: 0 0 50%;
+    }
+    .products.main .item{
+        flex: 0 0 33.3333%;
     }
 }
 
@@ -983,10 +1207,25 @@ form.search button:hover{
     }
 
     /*PRODUCTS*/
-    .trending .products {
+    .trending .products,
+    .products-categories.row{
         flex: 0 0 33.3333%;
     }
     .products.big .media{
         max-height: 373px;
+    }
+    .products.mini{
+        flex: 0 0 25%;
+    }
+    .products.main .item,
+    .widgets .row{
+        flex: 0 0 25%;
+    }
+
+    /*footer*/
+    .newsletter .box{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
     }
 }
