--- a/style.css
+++ b/style.css
@@ -306,7 +306,8 @@ h4{
     line-height: 10px;
     color: var(--white-color);
 }
-nav .fly-item{
+nav .fly-item,
+.header-nav .mini-cart .price .fly-item{
     top: 50%;
     margin-top: -24px;
     width: 30px;
@@ -1138,14 +1139,14 @@ form.search button:hover{
     cursor: pointer;
     z-index: 1;
 }
-.products .variant input {
+:where(.products .variant, .filter-block:not(.pricing) ) input {
     clip: rect(0,0,0,0);
     overflow: hidden;
     position: absolute;
     height: 0;
     width: 0;
 }
-.products .variant label::before {
+.products .colors .variant label::before {
     opacity: 1;
 }
 .products .variant label[for="cogrey"]::before{
@@ -1223,7 +1224,7 @@ form.search button:hover{
     transition: var(--trans-color);
 }
 
-
+/* products collapse */
 
 
 .products .collapse .has-child > a {
@@ -1272,7 +1273,7 @@ form.search button:hover{
 }
 
 
-
+/*PRODUCTS, review*/
 
 .products .reviews h4 {
     font-size: 2em;
@@ -1373,7 +1374,7 @@ form label {
 }
 
 
-
+/* page-single */
 
 .page-single .stock {
     margin: 2em 0;
@@ -1390,7 +1391,7 @@ form label {
     background-color: var(--secondary-dark-color)
 }
 
-
+/*related products*/
 
 .related-products .content {
    height: var(--percent100); 
@@ -1412,10 +1413,445 @@ form label {
     margin-top: auto;
 }
 
+/*PAGE CATEGORY*/
+.single-category .holder{
+    display: flex;
+    flex-direction: column;
+}
+.single-category .sidebar,
+.single-category .section{
+    flex: 1 0 100%;
+}
 
 
+/*Filter Block, sidebar products filter*/
 
+.filter-block{
+    margin-bottom: 1em;
+    padding-bottom: 1em;
+}
+.filter-block::not(:last-child){
+    border-bottom: 1px solid var(--border-color);
+}
+.filter-block h4{
+    font-size: 0.9em;
+    position: relative;
+    line-height: 2;
+}
+.filter-block li{
+    display: flex;
+    font-size: 0.9em;
+    position: relative;
+    line-height: 2;
+}
+.filter-block label .checked{
+    width: 16px;
+    height: 16px;
+    position: relative;
+    line-height: 0;
+    display: inline-block;
+    border: 2px solid --secondary-dark-color;
+    vertical-align: text-top;
+    margin: 0 7px 0 0;
+    cursor: pointer;
+}
+.filter-block label .checked::before{
+    content: '';
+    position: absolute;
+    width: 8px;
+    height: 8px;
+    background-color: var(--secondary-dark-color);
+    top: 2px;
+    left: 2px;
+    opacity: 0;
+}
+.filter-block input:checked + label .checked::before{
+    opacity: 1;
+}
+.filter-block li .count{
+    margin-left: auto;
+    color: var(--light-text-color);
+}
 
+.bycolor label[for="cored"]::before{
+    background-color: var(--primary-color);
+}
+.bycolor label[for="colight"]::before{
+    background-color: transparent;
+    border: 2px solid var(--dark-color);
+}
+
+input[type="range"]{
+    -webkit-appearance: none;
+    width: var(--percent100);
+}
+input[type="range"]::-webkit-slider-runnable-track{
+    width: var(--percent100);
+    height: 5px;
+    cursor: pointer;
+    background-color: var(--border-color);
+    box-shadow: none;
+    border: 0;
+}
+input[type="range"]::-webkit-slider-thumb {
+    z-index: 2;
+    position: relative;
+    height: 18px;
+    width: 14px;
+    background-color: var(--primary-color);
+    -webkit-appearance: none;
+    margin-top: 0.5em;
+}
+.byprice .price-range{
+    display: flex;
+    justify-content: space-between;
+    color: var(--light-text-color);
+    margin-top: 0.5em;
+}
+
+/*PAGE CATEGORY, Head & products block*/
+.page-title{
+    margin-bottom: 3em;
+}
+.cat-description p{
+    font-weight: var(--fw3);
+    font-size: 0.9em;
+}
+.cat-navigation{
+    font-size: 0.85em;
+    margin: 2em 0;
+    justify-content: flex-end;
+    gap: 1em;
+}
+.cat-navigation .item-filter{
+    margin-right: auto;
+}
+.cat-navigation > div{
+    position: relative;
+}
+.cat-navigation .item-filter a{
+    align-items: center;
+    text-transform: uppercase;
+}
+.cat-navigation ul{
+    display: none;
+    position: absolute;
+    left: 0;
+    min-width: var(--percent100);
+    width: max-content;
+    z-index: 10;
+}
+.cat-navigation .label, .cat-navigation ul li{
+    display: flex;
+    gap: 0.5em;
+    padding: 0.5em 1em;
+    transition: var(--trans-color);
+}
+:where(.item-sortir, .item-options) .label,
+.cat-navigation ul{
+    color: var(--light-text-color);
+    background-color: var(--light-bg-color);
+    cursor: pointer;
+}
+.cat-navigation :where(label, ul li):hover{
+    color: var(--dark-color);
+}
+:where(.item-sortir, .item-options) :hover ul{
+    display: block;
+}
+.load-more{
+    margin: 2em 0 4em;
+}
+
+.filter{
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    padding: 2em;
+    max-width: 400px;
+    width: 90%;
+    background-color: var(--white-color);
+    overflow: auto;
+    z-index: 1000;
+    box-shadow: rgb(0 0 0 / 30%) 0 10px 50px;
+    visibility: hidden;
+    opacity: 0;
+}
+.filter .show{
+    visibility: visible;
+    opacity: 1;
+}
+
+/*CART*/
+.mini-cart{
+    position: absolute;
+    width: 400px;
+    top: 100%;
+    right: 0;
+    background-color: rgb(0 0 0 / 30%) 0 10px 50px;
+    visibility: hidden;
+    opacity: 0;
+}
+.iscart:hover .mini-cart{
+    visibility: visible;
+    opacity: 1;
+}
+:is(.mini-cart .products, .products.cart) .thumbnail img{
+    transform: none;
+}
+.mini-cart ul :where(li, .price) {
+    position: relative;
+}
+.mini-cart .content{
+    width: var(--percent100);
+    height: var(--percent100);
+    touch-action: auto;
+    padding: 1.5em;
+}
+.mini-cart .cart-head{
+    font-size: 1.5em;
+    font-weight: var(--fw5);
+    color: var(--light-text-color);
+    padding-bottom: 0.5em;
+    margin-bottom: 1em;
+}
+.mini-cart .cart-body{
+    padding: 0 1.5em;
+    font-weight: var(--fw5);
+    color: var(--light-text-color);
+    padding-bottom: 0.5em;
+    margin-bottom: 1em;
+    border-bottom: 1px solid var(--border-color);
+}
+.mini-cart .cart-body{
+    padding: 0 1.5em;
+    margin: 0 -1.5em;
+    max-height: 450px;
+    overflow: auto;
+}
+:where(.mini-cart, .products.cart) .thumbnail{
+    position: relative;
+    width: 80px;
+    height: 80px;
+    flex-shrink: 0;
+    margin-right: 1em;
+}
+.main-cart .item-content p{
+    font-size: var(--font-small);
+    font-weight: var(--fw5);
+    margin-bottom: 1.5em;
+    line-height: 1.2;
+}
+.mini-cart .item-remove{
+    margin-left: 1em;
+    flex: 1;
+    justify-content: flex-end;
+}
+.mini-cart .subtotal p:last-child{
+    font-size: 2em;
+}
+.mini-cart .actions a{
+    display: block;
+    width: var(--percent100);
+    text-align: center;
+    margin-bottom: 1em;
+}
+.mini-cart.show{
+    visibility: visible;
+    opacity: 1;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    max-width: 400px;
+    width: 90%;
+}
+
+/*PAGE CART*/
+.products.cart form{
+    width: var(--percent100);
+}
+.products.cart table thead th{
+    vertical-align: middle;
+    background-color: var(--light-bg-color);
+}
+.products.cart table :where(th, td){
+    padding: 2em 1em;
+    text-align: center;
+}
+.products.cart table :where(th, td):first-child{
+    text-align: left;
+    padding-left: 2em;
+}
+.products.cart table tbody td:first-child{
+    padding-left: 0;
+}
+.products.cart table :where(.content, .qty-control, p){
+    margin: 0;
+    padding: 0;
+}
+.products.cart .qty-control :where(button, input){
+    width: 32px;
+    height: 32px;
+    padding: 0.25em;
+    text-align: center;
+    outline: 0;
+    border: 0;
+    background-color: transparent;
+}
+.products.cart .qty-control button{
+    cursor: pointer;
+}
+.products.cart table tbody tr{
+    border-bottom: 1px solid var(--border-color);
+}
+
+.cart-summary{
+    width: var(--percent100);
+    margin: 2.5em 0 4em;
+}
+.cart-summary .item{
+    background-color: var(--light-bg-color);
+}
+.cart-summary .coupon{
+    position: relative;
+}
+.cart-summary .coupon input{
+    font-size: 1.1em;
+    outline: 0;
+    width: var(--percent100);
+    padding: 0 1.5em;
+    line-height: 50px;
+    background-color: var(--white-color);
+    border: 3px solid var(--dark-color);
+}
+.cart-summary .coupon button{
+    position: absolute;
+    top: 0;
+    right: 0;
+    border: 0;
+    outline: 0;
+    font-size: 1em;
+    padding: 0 2.5em;
+    line-height: 56px;
+    background-color: var(--dark-color);
+    color: var(--white-color);
+    cursor: pointer;
+}
+.cart-summary .shipping-rate{
+    padding: 0 2em 0 1em;
+}
+.cart-summary .shipping-rate .has-child > a{
+    font-size: 1em;
+    margin: 2em 0;
+    border: 0;
+}
+.cart-summary .content form{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 1em;
+}
+.styled :where(input, select, textatea){
+    padding: 0.75em;
+    outline: 0;
+    background-color: var(--white-color);
+    border-width: 0 0 3px 0;
+    border-style: solid;
+    border-color: var(--border-color);
+}
+.products .cart-summary .variant form label{
+    position: relative;
+    border: 0;
+    background-color: var(--white-color);
+    transform: scale(.5) translateX(-25px);
+}
+.cart-summary .variant p span{
+    position: absolute;
+    top: 0;
+    left: 20px;
+    line-height: 3;
+}
+.cart-summary .variant input:checked + label::before{
+    opacity: 1;
+}
+.products.cart .cart-total table tr > *{
+    padding: 0;
+}
+.products.cart .cart-total table td{
+    text-align: right;
+}
+.cart-summary .cart-total{
+    padding: 2em;
+    background-color: var(--border-color);
+    line-height: 2em;
+}
+.cart-summary .cart-total table{
+    width: var(--percent100);
+}
+.cart-summary .cart-total td{
+    font-size: 2em;
+    font-family: 'Poppins';
+    font-weight: var(--fw8);
+    line-height: 2em;
+}
+.cart-summary .cart-total > a{
+    width: var(--percent100);
+    display: block;
+    text-align: center;
+    margin-top: 2em;
+    font-size: 1.25em;
+}
+
+/* CHECKOUT PAGE*/
+.checkout{
+    margin: 5em 0;
+}
+.checkout .left{
+    padding: 4em;
+    background-color: var(--light-bg-color);
+    box-shadow: 0 15px 70px -8px rgb(0 0 0 / 20%);
+}
+.checkout .item{
+    width: var(--percent100);
+}
+.checkout .left h1{
+    font-weight: var(--fw3);
+    margin-bottom: 1.5em;
+}
+.checkout .left label{
+    font-size: var(--font-small);
+    text-transform: capitalize;
+    position: relative;
+    width: fit-content;
+}
+.checkout .left label span{
+    position: absolute;
+    top: 0;
+    right: -10px;
+    width: 6px;
+    height: 6px;
+    background-color: var(--primary-color);
+    border-radius: var(--percent50);
+}
+.checkout p :where(input, textarea){
+    background-color: rgba(225 225 225 / 50%);
+    font-family: inherit;
+}
+.checkout p input:focus{
+    background-color: var(--white-color);
+}
+.checkout p.checkset {
+    flex-direction: row;
+}
+.checkout p.checkset label{
+    margin: 0 0 0 1em;
+    cursor: pointer;
+}
+.checkout h2{
+    padding-top: 0.5em;
+    margin-bottom: 0.75em;
+    border-top: 1px solid var(--border-color);
+}
 
 
 /* RESPONSIVE*/
@@ -1423,7 +1859,6 @@ form label {
     .products.main .item{
         flex: 0 0 50%;
     }
-
     /*page single*/
     .products.one .big-image{
         margin-bottom: 2em;
@@ -1436,6 +1871,32 @@ form label {
     }
 }
 
+@media screen and (max-width: 639px){
+    #cart-table thead{
+        display: none;
+    }
+    #cart-table tbody tr{
+        display: flex;
+        flex-wrap: wrap;
+        position: relative;
+        align-items: center;
+    }
+    #cart-table tbody tr td:first-child{
+        width: var(--percent100);
+        min-width: var(--percent100);
+        position: relative;
+    }
+    #cart-table tbody tr td:not(:first-child){
+        flex-basis: 0;
+        flex-grow: 1;
+        max-width: var(--percent100);
+    }
+    #cart-table tbody tr td:last-child{
+        position: absolute;
+        top: 0;
+        right: 0;
+    }
+}
 
 
 
@@ -1452,7 +1913,8 @@ form label {
     .products.main .item{
         flex: 0 0 33.3333%;
     }
-    .products.one .row {
+    .products.one .row,
+    .checkout .item {
         flex: 0 0 50%;
         width: 50%;
     }
@@ -1660,6 +2122,39 @@ form label {
     .products.one .flexwrap > .row:last-child > .item {
         padding-left:2em;
     }
-}
 
+    /*PAGE CATEGORY*/
+    .single-category .holder{
+        flex-direction: row;
+    }
+    .single-category .sidebar{
+        flex: 1 0 25%;
+    }
+    .single-category .section{
+        flex: 1 0 75%;
+    }
+    .single-category .sidebar .filter{
+        padding: 0 1.5em 0 0;
+        position: sticky;
+        top: 2em;
+        box-shadow: none;
+        width: var(--percent100);
+        z-index: initial;
+        visibility: visible;
+        opacity: 1;
+    }
+    .single-category .products.main .item{
+        flex: 0 0 33.3333%;
+    }
+
+    /*page cart*/
+    .products.cart .form-cart{
+        width: 66%;
+    }
+    .products.cart .cart-summary {
+        width: 34%;
+        padding-left: 2.5em;
+        margin-top: 0;
+    }
+}
 
