--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppings=wght@300;600;700;800&family=Rubik:wght@300;400;500;600&display=swap" rel="stylesheet">');
-
 /*
 Fonts:
 - Poppins: 300,400,600,700,800
@@ -34,12 +33,14 @@ Fonts:
 
 }
 
+
+
+
 *{
     margin: 0;
     padding: 0;
 }
-
-*,::before,::after{
+*,::before,::after {
     box-sizing: border-box;
 }
 
@@ -75,8 +76,9 @@ table{
 input::placeholder{
     font: inherit;
 }
+
 h1,h2,h3,h4{
-    font-family: 'Poppings';
+    font-family: 'Poppins';
 }
 h1{
     font-size: calc(1.3em+1vm);
@@ -143,10 +145,10 @@ h4{
 }
 .icon-small{
     font-size: 1.25em;
-    margin-left: auto;
+    margin: auto;
 }
 .icon-large{
-    font-size: 1.7em;
+    font-size: 1.75em;
     padding: 0 0.75em 0 0;
 }
 
